--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,3 @@
 2011-07-20  Kirit Saelensminde  <kirit@felspar.com>
- ChangeLog
- - Added ChangeLog
+ Initial version that shows how Slumber should look when completed.
+ Added ChangeLog
