--- a/ChangeLog
+++ b/ChangeLog
@@ -2,7 +2,7 @@
  The Slumber client now includes (more or less) full support for the object graph structure.
 
 2011-07-22  juacompe  <juacompe@squire.proteus-tech.com>
- Added a skeleton for a Slumber clent.
+ Added a skeleton for a Slumber client.
 
 2011-07-20  Kirit Saelensminde  <kirit@felspar.com>
  Initial version that shows how Slumber should look when completed.
