--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2011-08-05  Kirit Saelensminde  <kirit@felspar.com>
+ The server operations can now implement either `operation` or the HTTP method that they need to execute with. Unsupported methods will return a 403.
+ Refactored the layout of the operations.
+
 2011-07-28  Kirit Saelensminde  <kirit@felspar.com>
  Added some simple mocking capability so that client code that uses Slumber can be tested.
 
