--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2011-08-22 Kirit Saelensminde  <kirit@felspar.com>
+ Added a delete operation for instances.
+
 2011-08-10 Kirit Saelensminde  <kirit@felspar.com>
  The type of the returned instances in the client from `get` now makes sense.
 
