--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2011-12-29  Kirit Saelensminde  <kirit@felspar.com>
+ Fixed the license information in the setup tags.
+
 2011-12-02  Kirit Saelensminde  <kirit@felspar.com>
  The authentication back end now copies across the attribute values and resets them on the local user each time the user is fetched from the backend.
 
