--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,6 @@
 2012-01-12  Kirit Saelensminde  <kirit@felspar.com>
  Renamed the slumber_test folder to slumber_examples.
+ Added the beginnings of the server side configuration by allowing model properties to be exposed.
 
 2011-12-29  Kirit Saelensminde  <kirit@felspar.com>
  Fixed the license information in the setup tags.
