--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2012-02-22  Kirit Saelensminde  <kirit@felspar.com>
+ Added a RemoteForeignKey field type which can be used to handle Slumber objects running in the same or remote services.
+
 2012-02-18  Kirit Saelensminde  <kirit@felspar.com>
  Added a proxy method for the model create operation. This has also changed the data returned by the old create operation.
  Added CSRF bypassing on the Slumber views (if the version of Django uses CSRF).
