--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,6 @@
 2012-04-02  Kirit Saelensminde  <kirit@felspar.com>
  Requests are now signed when going back to another service.
+ Added a Realm to the WWW-Authentication header.
 
 2012-03-30  Kirit Saelensminde  <kirit@felspar.com>
  Client side proxies are now loaded via the new SLUMBER_CLIENT_APPS setting.
