--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2012-04-05  Kirit Saelensminde  <kirit@felspar.com>
+ The authentication forwarding backend is now properly compatible with the real Fost authn request signing.
+
 2012-04-02  Kirit Saelensminde  <kirit@felspar.com>
  Requests are now signed when going back to another service.
  Added a Realm to the WWW-Authentication header.
