--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,6 @@
 2012-04-05  Kirit Saelensminde  <kirit@felspar.com>
  The authentication forwarding backend is now properly compatible with the real Fost authn request signing.
+ The type of the user_id that we see is important as it tells us what we need to look it up with.
 
 2012-04-02  Kirit Saelensminde  <kirit@felspar.com>
  Requests are now signed when going back to another service.
