--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,6 @@
 2013-02-14  Kirit Saelensminde  <kirit@felspar.com>
  Fixed a bug in the caching code that meant that the cache never had any data added to it.
- The create operation now adds a `pk` data field in the root which can be used to fetch the primary key value that was issued.
+ The create operation now adds a `pk` data field in the root which can be used to fetch the primary key value that was issued and a `created` one which determines whether a new instance was made or not.
  Allow a setting `SLUMBER_LOCAL_PREFIX` to be used to override the local prefix calculated from the service name for older configurations that don't make use of a service name.
 
 2012-10-04  Chokchai Phatharamalai  <juacompe@proteus-tech.com>
