Added in a Django 1.5 test project and made suitable changes to the code to account for it.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2013-04-18  Kirit Saelensminde  <kirit@felspar.com>
+ Added in a Django 1.5 test project and made suitable changes to the code to account for it.
+
 2013-02-14  Kirit Saelensminde  <kirit@felspar.com>
  Fixed a bug in the caching code that meant that the cache never had any data added to it.
  The create operation now adds a `pk` data field in the root which can be used to fetch the primary key value that was issued and a `created` one which determines whether a new instance was made or not.
