--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2013-10-28  Kirit Saelensminde  <kirit@felspar.com>
+ Allow us to set up a POST expectation, but not test on the post data itself by setting the expected data to None.
+
 2013-09-24  Kirit Saelensminde  <kirit@felspar.com>
  The decorator `slumber.connector.ua.for_user` now copies the wrapped function name so that it can be used for tests etc. where the original function name is still needed.
 
