Allow the removal of built-in operations from models and also changes to the URIs they are mounted at.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2013-12-04  Kirit Saelensminde  <kirit@felspar.com>
+ Allow the removal of built-in operations from models and also changes to the URIs they are mounted at.
+
 2013-12-03  Kirit Saelensminde  <kirit@felspar.com>
  Allow operations to be mounted at any URL below the Slumber mount point.
 
