Implemented proper pagination support for the HAL instance list

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2013-12-05  Kirit Saelensminde  <kirit@felspar.com>
+ Implemented proper pagination support for the HAL instance list and broke out a re-usable API for them over any query set.
+
 2013-12-04  Kirit Saelensminde  <kirit@felspar.com>
  Allow the removal of built-in operations from models and also changes to the URIs they are mounted at.
  Make HTML the default for browsers rather than XML.
