--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2013-12-09  Kirit Saelensminde  <kirit@felspar.com>
+ Allow sub-parts of the response object to be used for JSON and XML output.
+
 2013-12-05  Kirit Saelensminde  <kirit@felspar.com>
  Implemented proper pagination support for the HAL instance list and broke out a re-usable API for them over any query set.
  Guess at some output to linkify in the HTML output.
