--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2013-11-20  Chirapat Harigulrak  <chirapat@proteus-tech.com>
+ make html parser support any type of object
+
 2013-12-05  Kirit Saelensminde  <kirit@felspar.com>
  Implemented proper pagination support for the HAL instance list and broke out a re-usable API for them over any query set.
  Guess at some output to linkify in the HTML output.
@@ -19,7 +22,7 @@
  Merge xml response handler chirapat
 
 2013-11-20  Chirapat Harigulrak  <chirapat@proteus-tech.com>
-  Create xml response handler
+ Create xml response handler
 
 2013-11-12  Kirit Saelensminde  <kirit@felspar.com>
  Django applicatoins that are imported on the server side are now able to take a configuration that appears when the service URL is fetched.
