--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2014-04-22 Siraset Jirapatchandej <siraset@proteus-tech.com>
+Handle blank request.body
+
 2014-04-10  Chirapat Harigulrak  <chirapat@proteus-tech.com>
 Implement require permissions decorator which take list of permissions as parameter.
 
