Add PUT and DELETE support to the instance data

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2014-09-30  Kirit Saelensminde  <kirit@felspar.com>
+ Add PUT and DELETE support to the instance data (normally `/data/`). This will soon deprecate the current update and delete operations.
+
 2014-09-29  Kirit Saelensminde  <kirit@felspar.com>
  Add a new operation superclass `Operation` that does not pass along the application name or model name parameters (as they're already on the operation).
 
