--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2015-08-11 Nui Narongwet <narongwet@proteus-tech.com>
+ Add a lookup table from database table name to slumber model
+
 2015-06-03 Yothin Muangsommuk <yothin@proteus-tech.com>
  Add slumber RemoteForeignKey data_mapping in json formatting for server.
 
